# VISION

./: README.md
vision/: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  ROADMAP.md  mkdocs.yml  pyproject.toml  requirements.txt
vision/android-app/: build.gradle.kts  gradle.properties  settings.gradle.kts
vision/android-app/app/: build.gradle.kts  proguard-rules.pro
vision/backend/: docker-compose.yml  requirements.txt
vision/backend/app/: main.py
vision/backend/app/api/: __init__.py
vision/backend/app/core/: __init__.py  config.py  deps.py  security.py
vision/backend/app/db/: __init__.py  models.py  session.py
vision/backend/app/schemas/: __init__.py
vision/backend/app/services/: __init__.py  sync.py
vision/ci/docker/: Dockerfile.ai  Dockerfile.backend
vision/ci/github/: ai-ci.yml  android-ci.yml  model-release.yml
vision/database/: vision.db
vision/documentation/api/: API.md
vision/documentation/architecture/: ARCHITECTURE.md
vision/documentation/database/: DATABASE.md
vision/documentation/deployment/: DEPLOYMENT.md
vision/documentation/developer/: DEVELOPER.md
vision/documentation/security/: SECURITY.md
vision/documentation/user/: USER.md
vision/mlops/: __init__.py
vision/mlops/tracking/: __init__.py  model_registry.py  tracker.py
vision/models/: README.md
vision/registry/: registry.json
vision/scripts/: PC_TEST_README.md  diag_scrfd.py  liveness_runtime.py  passive_liveness.py  pc_test.py  run_export.py  smoke_liveness.py  smoke_passive.py  smoke_register.py  smoke_webcam.py
vision/scripts/benchmarks/: README.md
vision/scripts/maintenance/: cleanup.py
vision/scripts/setup/: bootstrap.py
vision/tests/security/: benchmark_liveness.py  run_printed_photo.py
vision/tests/unit/: __init__.py  test_core.py  test_db.py  test_embedding_search.py  test_image_utils.py  test_liveness.py  test_temporal.py
vision/training/configs/: __init__.py  antispoof.yaml  recognition.yaml  temporal.yaml
vision/training/evaluation/: cross_validate.py  evaluate.py  metrics.py
vision/training/pipelines/: __init__.py
vision/training/pipelines/antispoof/: __init__.py  train_antispoof.py
vision/training/pipelines/recognition/: __init__.py  train_recognition.py
vision/training/pipelines/temporal/: __init__.py  train_temporal.py
vision/vision/: __init__.py
vision/vision/ai/: __init__.py
vision/vision/ai/alignment/: __init__.py  face_align.py
vision/vision/ai/antispoof/: __init__.py  anti_spoof.py
vision/vision/ai/detection/: __init__.py  face_detector.py
vision/vision/ai/embedding_search/: __init__.py  (+1 more)
vision/vision/authentication/: __init__.py  authenticator.py
vision/vision/config/: __init__.py  settings.py
vision/vision/core/: __init__.py  demo.py  exceptions.py  image_utils.py  logging.py  math_utils.py  onnx_runner.py  pipeline.py  types.py
vision/vision/database/: __init__.py  connection.py
vision/vision/identification/: __init__.py  identify.py
vision/vision/onnx/: __init__.py
vision/vision/registration/: __init__.py  enroll.py  video_source.py
(+84 files in other folders)
